--- a/gb/19/5/25/n11279696.md
+++ b/gb/19/5/25/n11279696.md
@@ -1,59 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/szzd1/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/szzd1/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/3.jpg" title="¹ú¼ÊĞÂÎÅ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/4.jpg" title="´óÂ½ĞÂÎÅ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/szzd1/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5657.md#1">ÈıÍË</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176117.md#1">ÖĞ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176107.md#1">µ³¿ı»­Æ¤</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1320400.md#1">ÖĞ¹²¼äµı</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/szzd1/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5562.md#1">Î±»ğ</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4378.md#1">ÎÊ´ğ</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ı½±</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2>ĞíÆäÕı£ºËûµÄ±³Ó°</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2012/05/1205081034282188-600x400.jpg" />
-<h6>£¨Ğ»ÔÂÇÙ/´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yzxnzi3171/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yzxnzi3171/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹å†å²</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/yzxnzi3171/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf5792.md#1">å‰–æ</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/yzxnzi3171/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/yzxnzi3171/djy/blob/master/gb/nf4786.md#1">ç¥éŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>è®¸å…¶æ­£ï¼šä»–çš„èƒŒå½±</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2012/05/1205081034282188-600x400.jpg" />
+<h6>ï¼ˆè°¢æœˆç´/å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-<p>²‰±€Àï£¬ÊÇÔÚÃÎÖĞÂğ£¿<br />
-»¹ÊÇÔÚµ±ÄêµÄÅ©´åÏç¼ä£¿<br />
-Ö»¼ûÒ»Á¾Å£³µ»º»ºÇ°ĞĞ<br />
-³µÂÖ»¹·¢³öÔşÔşµÄÄ¥²ÁÉù<br />
-ÉÏÃæ¶Ñµş×ÅÒ»¸öÂé´üÓÖÒ»¸öÂé´ü<br />
-¹Ä¹ÄµÄ£¬³õ¿´²»ÖªÊÇÊ²Ã´¶«Î÷<br />
-Ë®Å£¼ç×Åéî£¬×ö³öĞÁ¿àÀ­³µµÄ¶¯×÷<br />
-Ò»ÃûÊİÊİµÄÀÏÈË°Ú¶¯×Å¼İÔ¦µÄ×ËÊÆ¡­¡­</p>
-<p>²‰±€Àï£¬ÊÇÔÚÃÎÖĞÂğ£¿<br />
-»¹ÊÇÔÚµ±ÄêµÄÅ©´åÏç¼ä£¿<br />
-ÄÇÅ£³µ»º»ºÇ°ĞĞ<br />
-´ÓÎÒÇ°Ãæ²»Ô¶´¦¾­¹ı<br />
-ºÃÊìÏ¤ºÃÊìÏ¤Ñ½<br />
-ÎÒÑÛ¾¦Ò»¿Ì²»ÀëµØÖ±¶¢×Å¿´¡­¡­<br />
-Í»È»ĞÄÖĞÒ»ÉÁ£¬Å¶£¬¶ÔÁË<br />
-ÎÒĞ¡Ê±ºò³£¼ûµÄÓ°ÏñÍ»È»ÃÍ×²ÁË¹ıÀ´<br />
-Ô­À´ÄÇÒ»¸öÂé´üÓÖÒ»¸öÂé´ü£¬¹Ä×ÅµÄÊÇµ¾¹È</p>
-<p>µ¾¹È£¬·¹Ê³Ö®Ô´<br />
-ÉúÃñ²»ÄÜ»òÈ±<br />
-ÊÇ¸Ã±¦Ï§Ö®ÕäÎï<br />
-Å©·òÈÕÈÕĞÁ¿à<br />
-ÒÔº¹Ë®ÑªË®¹à¸È³öµÄ½á¾§<br />
-ÎÒ¸¸Ç×µ±Äê±³¸ºµÄÎÒÒ»¼ÒµÄÉú»î</p>
-<p>¸Õ´Óµ¾ÌïÀïÔØ»ØÀ´µÄ<br />
-Õâ²»ÊÇ¸îµ¾Ê±½ÚÂğ£¿<br />
-Ëû³ÔÁ¦µØ±³×ÅÂé´ü<br />
-±³µ½É¹¹ÈÛôÀï£¬·ÅÏÂ£¬ÔÙ»ØÈ¥±³<br />
-²»×¡À´»Ø£¬ºÍ×ÅÄàÍÁµÄº¹£¬ÁÜÀì×Å<br />
-ÑüÍäµÃÍ·¼¸ºõÒªÅöµ½µØÃæ</p>
-<p>ºÃĞÁ¿àÑ½£¬ÄÇÀÏÈË£¡<br />
-ÎÒÑÛ¾¦Ò»¿Ì²»ÀëµØÖ±¶¢×Å¿´¡­¡­<br />
-Í»È»ĞÄÖĞÒ»ÉÁ£¬Å¶£¬¶ÔÁË<br />
-ÎÒĞ¡Ê±ºò³£¼ûµÄÓ°ÏñÍ»È»ÃÍ×²ÁË¹ıÀ´<br />
-ÄÇÀÏÈË²»ÕıÊÇÎÒ¸¸Ç×Âğ£¿<br />
-Ëû»¹ÍÏ×ÅÒ»Ö»Ğ¡Ê±ºò<br />
-±»Ë®Å£²È¶ÏÃ»½ÓºÃµÄ×ó±ÛÄØ<br />
-Ã»´í¡£ËäÔÚ²‰±€Àï<br />
-ÎÒ¿´µÃ³ö£¬Èç¼Ù°ü»»<br />
-ËûÊÇÎÒ¸¸Ç×£¡</p>
-<p>Ëû±³×ÅÒ»Âé´üÒ»Âé´üµÄµ¾¹È£¬·ÅÏÂ£¬ÓÖ»ØÈ¥±³<br />
-Ò»ÌËÓÖÒ»ÌËµØ±¼Ã¦ÓÚÅ£³µºÍÉ¹¹ÈÛô¼ä<br />
-±¼Ã¦ÓÚÉú»îºÍÈÕ×ÓµÄ¼·Ñ¹¼ä<br />
-ºÃĞÁ¿àµÄÎÒµÄ¸¸Ç×Ñ½£¡<br />
-ÎÒÃ¦²»µüÆğÉíÇ÷Ç°Òª°ïËû<br />
-²»ÒâËûÈ´Í»È»±³ÆğÒ»Âé´üµ¾¹È<br />
-ÔÚ²‰±€ÀïÏòÇ°¼²×ß<br />
-×ßÏòµ±ÄêµÄÅ©´åÏç¼ä£¬²»ÔÙ»ØÍ·¡­¡­</p>
-<p>°¦£¬ÎÒË«ÑÛÖĞäèãûµÄºÀ´óÓêÑ½¡­¡­</p>
+<p>çŸ‡çœ¬é‡Œï¼Œæ˜¯åœ¨æ¢¦ä¸­å—ï¼Ÿ<br />
+è¿˜æ˜¯åœ¨å½“å¹´çš„å†œæ‘ä¹¡é—´ï¼Ÿ<br />
+åªè§ä¸€è¾†ç‰›è½¦ç¼“ç¼“å‰è¡Œ<br />
+è½¦è½®è¿˜å‘å‡ºè½§è½§çš„ç£¨æ“¦å£°<br />
+ä¸Šé¢å †å ç€ä¸€ä¸ªéº»è¢‹åˆä¸€ä¸ªéº»è¢‹<br />
+é¼“é¼“çš„ï¼Œåˆçœ‹ä¸çŸ¥æ˜¯ä»€ä¹ˆä¸œè¥¿<br />
+æ°´ç‰›è‚©ç€è½­ï¼Œåšå‡ºè¾›è‹¦æ‹‰è½¦çš„åŠ¨ä½œ<br />
+ä¸€åç˜¦ç˜¦çš„è€äººæ‘†åŠ¨ç€é©¾é©­çš„å§¿åŠ¿â€¦â€¦</p>
+<p>çŸ‡çœ¬é‡Œï¼Œæ˜¯åœ¨æ¢¦ä¸­å—ï¼Ÿ<br />
+è¿˜æ˜¯åœ¨å½“å¹´çš„å†œæ‘ä¹¡é—´ï¼Ÿ<br />
+é‚£ç‰›è½¦ç¼“ç¼“å‰è¡Œ<br />
+ä»æˆ‘å‰é¢ä¸è¿œå¤„ç»è¿‡<br />
+å¥½ç†Ÿæ‚‰å¥½ç†Ÿæ‚‰å‘€<br />
+æˆ‘çœ¼ç›ä¸€åˆ»ä¸ç¦»åœ°ç›´ç›¯ç€çœ‹â€¦â€¦<br />
+çªç„¶å¿ƒä¸­ä¸€é—ªï¼Œå“¦ï¼Œå¯¹äº†<br />
+æˆ‘å°æ—¶å€™å¸¸è§çš„å½±åƒçªç„¶çŒ›æ’äº†è¿‡æ¥<br />
+åŸæ¥é‚£ä¸€ä¸ªéº»è¢‹åˆä¸€ä¸ªéº»è¢‹ï¼Œé¼“ç€çš„æ˜¯ç¨»è°·</p>
+<p>ç¨»è°·ï¼Œé¥­é£Ÿä¹‹æº<br />
+ç”Ÿæ°‘ä¸èƒ½æˆ–ç¼º<br />
+æ˜¯è¯¥å®æƒœä¹‹çç‰©<br />
+å†œå¤«æ—¥æ—¥è¾›è‹¦<br />
+ä»¥æ±—æ°´è¡€æ°´çŒæº‰å‡ºçš„ç»“æ™¶<br />
+æˆ‘çˆ¶äº²å½“å¹´èƒŒè´Ÿçš„æˆ‘ä¸€å®¶çš„ç”Ÿæ´»</p>
+<p>åˆšä»ç¨»ç”°é‡Œè½½å›æ¥çš„<br />
+è¿™ä¸æ˜¯å‰²ç¨»æ—¶èŠ‚å—ï¼Ÿ<br />
+ä»–åƒåŠ›åœ°èƒŒç€éº»è¢‹<br />
+èƒŒåˆ°æ™’è°·åŸ•é‡Œï¼Œæ”¾ä¸‹ï¼Œå†å›å»èƒŒ<br />
+ä¸ä½æ¥å›ï¼Œå’Œç€æ³¥åœŸçš„æ±—ï¼Œæ·‹æ¼“ç€<br />
+è…°å¼¯å¾—å¤´å‡ ä¹è¦ç¢°åˆ°åœ°é¢</p>
+<p>å¥½è¾›è‹¦å‘€ï¼Œé‚£è€äººï¼<br />
+æˆ‘çœ¼ç›ä¸€åˆ»ä¸ç¦»åœ°ç›´ç›¯ç€çœ‹â€¦â€¦<br />
+çªç„¶å¿ƒä¸­ä¸€é—ªï¼Œå“¦ï¼Œå¯¹äº†<br />
+æˆ‘å°æ—¶å€™å¸¸è§çš„å½±åƒçªç„¶çŒ›æ’äº†è¿‡æ¥<br />
+é‚£è€äººä¸æ­£æ˜¯æˆ‘çˆ¶äº²å—ï¼Ÿ<br />
+ä»–è¿˜æ‹–ç€ä¸€åªå°æ—¶å€™<br />
+è¢«æ°´ç‰›è¸©æ–­æ²¡æ¥å¥½çš„å·¦è‡‚å‘¢<br />
+æ²¡é”™ã€‚è™½åœ¨çŸ‡çœ¬é‡Œ<br />
+æˆ‘çœ‹å¾—å‡ºï¼Œå¦‚å‡åŒ…æ¢<br />
+ä»–æ˜¯æˆ‘çˆ¶äº²ï¼</p>
+<p>ä»–èƒŒç€ä¸€éº»è¢‹ä¸€éº»è¢‹çš„ç¨»è°·ï¼Œæ”¾ä¸‹ï¼Œåˆå›å»èƒŒ<br />
+ä¸€è¶Ÿåˆä¸€è¶Ÿåœ°å¥”å¿™äºç‰›è½¦å’Œæ™’è°·åŸ•é—´<br />
+å¥”å¿™äºç”Ÿæ´»å’Œæ—¥å­çš„æŒ¤å‹é—´<br />
+å¥½è¾›è‹¦çš„æˆ‘çš„çˆ¶äº²å‘€ï¼<br />
+æˆ‘å¿™ä¸è¿­èµ·èº«è¶‹å‰è¦å¸®ä»–<br />
+ä¸æ„ä»–å´çªç„¶èƒŒèµ·ä¸€éº»è¢‹ç¨»è°·<br />
+åœ¨çŸ‡çœ¬é‡Œå‘å‰ç–¾èµ°<br />
+èµ°å‘å½“å¹´çš„å†œæ‘ä¹¡é—´ï¼Œä¸å†å›å¤´â€¦â€¦</p>
+<p>å”‰ï¼Œæˆ‘åŒçœ¼ä¸­æ»‚æ²±çš„è±ªå¤§é›¨å‘€â€¦â€¦</p>
 <p> <strong>His back view</strong>&emsp;Hsu ChiCheng</p>
 <p>In drowsy, is it in the dream?<br />
 Or is it in the countryside in those years?<br />
@@ -62,37 +62,37 @@ The wheels send off the sound of quack by the rubbing<br />
 There pile up a pack after a pack of gunny-bag<br />
 Distension of abdomen, unable to see what thing within at first time<br />
 The ox shoulders the yoke, makes the action of drawing the ox cart toilsome like<br />
-A thin old man sways the posture of driving¡­</p>
+A thin old man sways the posture of drivingâ€¦</p>
 <p>In drowsy, is it in the dream?<br />
 Or is it in the countryside in those years?<br />
 The ox cart marches slowly<br />
 Passes through no far in front of me<br />
-It¡¯s how acquainted with me<br />
-I fix my eyes on it with whole my mind every minute¡­<br />
-It flashes in my mind suddenly, oh, it¡¯s right<br />
+Itâ€™s how acquainted with me<br />
+I fix my eyes on it with whole my mind every minuteâ€¦<br />
+It flashes in my mind suddenly, oh, itâ€™s right<br />
 The imagine I view often in my childhood dash me suddenly<br />
 Originally that load in a pack after a pack of gunny-bag distension of abdomen is rice</p>
 <p>Rice is the source of our food<br />
-It can¡¯t be lack for people<br />
+It canâ€™t be lack for people<br />
 Is the treasure we ought to cherish<br />
 The crystal the farmer hard work to watering<br />
 With sweat and blood every day<br />
 My father carried on the back the same years is the life of my whole family</p>
-<p>It¡¯s carry on back from the paddy field<br />
-Isn¡¯t it the season of reaping the rice?<br />
+<p>Itâ€™s carry on back from the paddy field<br />
+Isnâ€™t it the season of reaping the rice?<br />
 He carries on the back taking much effort the packs of gunny-bag<br />
 Carries on back to the field dry rice in the sun, put down, back to carry back again<br />
 To and fro ceaselessly, dripping with muddy sweat<br />
 Waist is curved into the head almost touch earth</p>
 <p>How hard is the old man!<br />
-I fix my eyes on it with whole my mind every minute¡­<br />
-It flashes in my mind suddenly, oh, it¡¯s right<br />
+I fix my eyes on it with whole my mind every minuteâ€¦<br />
+It flashes in my mind suddenly, oh, itâ€™s right<br />
 The imagine I view often in my childhood dash me suddenly<br />
-Isn¡¯t it the old man just my father?<br />
+Isnâ€™t it the old man just my father?<br />
 Besides, he pulls the left arm<br />
 Not join completely treaded by ox in his childhood<br />
-It¡¯s right. Though it¡¯s drowsy<br />
-I can identify clear, he¡¯s my father<br />
+Itâ€™s right. Though itâ€™s drowsy<br />
+I can identify clear, heâ€™s my father<br />
 Replacement guaranteed if not genuine</p>
 <p>He carries on back a pack after a pack of gunny-bag of rice, put down, back to carry back again<br />
 Bustling between the ox cart and the field dry rice in sun a waddle after another wade<br />
@@ -102,42 +102,53 @@ I wish to help him and go forward in a hurry<br />
 Unexpectedly, he carries on back a pack of gunny-bag suddenly<br />
 March hurry forward into drowsy of rice<br />
 March toward country side the same year, not turn his head again@</p>
-<p>ÔğÈÎ±à¼­£ºÁÖ·¼Óî</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ—èŠ³å®‡</p>
+
 <hr>
 
-#### Ô­ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚĞèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼ş</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/5/25/n11279696.htm">ĞíÆäÕı£ºËûµÄ±³Ó°</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼ş</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØĞÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/18/7/16/n10567138.htm">ÄãËù²»ÖªµÄ401K£º¶à½Ç»¯ÓÅÊÆ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/26/n10248654.htm">È«ÃÀÎ¨Ò»³¤ÆÚ»¤ÀíÏÕ£ºË«ÈË¹²ÓÃ¡¢401KºÍIRA¿É¹ºÂò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/14/6/29/n4188766.htm">ÃÀ¹úÔ±¹¤ÍËĞİ½ğ¸£Àû¼Æ»®Ö®Ò»£º401K</a></li>
-> <li><a href="http://www.epochtimes.com/gb/14/5/30/n4167229.htm">ÃÀ¹úÔ±¹¤ÍËĞİ½ğ¸£Àû¼Æ»®»®Ö®Ò»£º401K</a></li>
-> <li><a href="http://www.epochtimes.com/gb/13/10/6/n3980618.htm">Í¶×ÊÀí²Æ£ºÈçºÎ¹ÜÀíºÃ401KÍËĞİ½ğ¼Æ»®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/13/6/21/n3899367.htm">¡¾ÖÂ¸»Í¶×Ê²Æ¾­×¨À¸¡¿401K×ª»»µ½Roth 401KµÄĞÂ¹æÔò</a></li>
-> <li><a href="https://github.com/szzd1/djy/blob/master/gb/17/1/5/n8671887.md">¾Å³ÉÃÀ¹úÈË²»ÖªµÀÔõÃ´¹ÜÀí401(k)ÍËĞİÕË»§</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼ş</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅĞÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/14/n11258839.htm">½¯Î³¹ú±ôËÀÌåÑé Ç×ÑÛ¿´µ½¹ıÊÀµÄ¸¸Ç×½¯½éÊ¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/9/29/n8348119.htm">¡¾Ç§¹ÅÓ¢ĞÛÈËÎï¡¿ÕÅÈı·á(9) ËÄÁ½²¦Ç§½ï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273123.htm">ãë´¨µØÕğÉ½±ÀµØÁÑµÄÄÇÒ»¿Ì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/6/n11237158.htm">·ÅÆúÎ¢Èí10±¶¸ßĞ½ AI×ÊÓÅÉú¹éÌ¨µ±½ÌÊÚ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/9/27/n8343797.htm">¡¾Ç§¹ÅÓ¢ĞÛÈËÎï¡¿ÕÅÈı·á(8) Îäµ±´´¾øÑ§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275376.htm">¡¾ĞÂÎÅ¿´µã¡¿ÃÀÖĞÊÍÖØÌ¸ĞÅºÅ£¿´¨Ï°»áÊÇ¹Ø¼ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11271114.htm">¡¾ĞÂÎÅ¿´µã¡¿ÈÈ²¥ÃÀ¾çÔâ·â Ó°ÊÓÒ²³· ÍøÃñ·ßÅ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/20/n11268809.htm">¡¾ĞÂÎÅ¿´µã¡¿Ê§È¥¹È¸èÖ§³Ö »ªÎª½«ÊÜ¶à´ó´ò»÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273380.htm">ÃÀ·½Ô¸Òâ¿ª·ÅĞÂÒ»ÂÖÃ³Ò×Ì¸ÅĞ µ«ÓĞÒ»Ìõ¼ş</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275528.htm">²úºó¸´³öÎªËïÙ³µ±Åä½Ç ÕÔÀöÓ±£ºÑİºÃÏ·¾ÍĞĞ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275458.htm">¸£¿ËË¹Å®Ö÷²¥»Ø»÷ÖĞ¹²´óÍâĞû£ºÄãÑ¡´íÁË¶ÔÏó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275528.htm">²úºó¸´³öÎªËïÙ³µ±Åä½Ç ÕÔÀöÓ±£ºÑİºÃÏ·¾ÍĞĞ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273585.htm">Á½¶ÈÉÏÁªºÏ¹ú´ó»áÑİ½² ÍõÔ´³éÑÌĞÂÎÅµÇBBC</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275909.htm">ÖÜ»ÛÃô·ÖÏí¶³ÁäÃØóÅ£ºÃ»ÓĞÊ²Ã´¼É¿Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275725.htm">±»ÎÊÓë·¶±ù±ùÕÔŞ±¾ºÕù ÕÂ×Óâù£ºÎÊÌâ²»Ì«ÓÑºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273153.htm">Ğ¯¡¶ÎÔ»¢²ØÁú¡·ê©ÄÉÖØÓ³ ÕÂ×Óâù»ñÀî°²×£ºØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/15/n11260584.htm">Ğ¡º¢¡°W×ø×Ë¡± µ±ĞÄÓ°Ïì·¢Óı ËğÉË÷Å¹Ø½Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/24/n11210075.htm">´ĞËâ·À´ó³¦°© ½µÈ«Éí8ÖÖ°©·çÏÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275241.htm">ÈÕ±¾ÈË³¤ÊÙ¿ìÀÖÓĞÃØ¾÷ ÎüÒıÈ«ÇòÊı°ÙÍòÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275909.htm">ÖÜ»ÛÃô·ÖÏí¶³ÁäÃØóÅ£ºÃ»ÓĞÊ²Ã´¼É¿Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/24/n11278004.htm">³£½Ó´¥ËÜ»¯¼Á ÔöĞÄÑª¹Ü·çÏÕ 4ÕĞÔ¶ÀëËÜ»¯¼Á</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/3/15/n11116486.md#1">è®¸å…¶æ­£ï¼šä¼¸è…°</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/3/21/n11130147.md#1">è®¸å…¶æ­£ï¼šæ•…ä¹¡ç—…äº†</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/3/26/n11141675.md#1">è®¸å…¶æ­£ï¼šä»°</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/4/1/n11155962.md#1">è®¸å…¶æ­£ï¼šé«˜é£</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/4/5/n11165829.md#1">è®¸å…¶æ­£ï¼šå­µ</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/4/11/n11179469.md#1">è®¸å…¶æ­£ï¼šé—®åˆæ¬¢</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/4/15/n11188436.md#1">è®¸å…¶æ­£ï¼šé—®æœˆç´</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/4/20/n11201144.md#1">è®¸å…¶æ­£ï¼šè¿·è·¯åœ¨ç®­ç«¹æ—ä¸­</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/4/24/n11210523.md#1">è®¸å…¶æ­£ï¼šèµå±±é¢‚æµ·</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/4/30/n11224727.md#1">è®¸å…¶æ­£ï¼šè½¦ç¥¸æ˜¾å½±</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÁĞ¶şÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=4&t=&d=https://github.com/szzd1/djy/blob/master/gb/19/5/25/n11279696.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/szzd1/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/wei-f1.jpg" title="ÖĞ¹²µÄÎ±»ğÆ­¾Ö"  alt="ÖĞ¹²µÄÎ±»ğÆ­¾Ö"></a><br><a href="https://github.com/szzd1/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖĞ¹²Í¶ÄĞÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖĞ¹²Í¶ÄĞÀÎ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈıÍË"  alt="¹Ø×¢3ÒÚÈËÈıÍË"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/jie-t.jpg" title="½âÌåÖĞ¹²¸´ĞËÖĞ»ª"  alt="½âÌåÖĞ¹²¸´ĞËÖĞ»ª"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/gao-zs.jpg" title="ÖĞ¹²ÆÈº¦Á¼ĞÄÂÉÊ¦"  alt="ÖĞ¹²ÆÈº¦Á¼ĞÄÂÉÊ¦"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/sj2.jpg" title="ÕâĞ©¹ÙÔ±ÎªºÎÆğËß½­ÔóÃñ"  alt="ÕâĞ©¹ÙÔ±ÎªºÎÆğËß½­ÔóÃñ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØĞÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØĞÅ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌıÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌıÔòÃ÷"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâĞ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâĞ£Ô°"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕğº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕğº³³¡Ãæ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/dalu-sk.jpg" title="ÈËĞÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËĞÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/szzd1/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼ş"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼ş"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æ¨èï¼š</strong>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">ä¸­å…±çš„ä¼ªç«éª—å±€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10486558.md#1" target="_blank">ã€è¿˜åŸå²å®ã€‘å›½å…±å†…æˆ˜ä¸­è¢«æ¬ºéª—çš„ç¾å›½æ”¿åºœ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/4/n8065341.md#1" target="_blank">æˆ‘å’Œå­©å­ç»å†çš„ç¥è¯ï¼ˆ1ï¼‰</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/14/n13020876.md#1">ã€å‘½ç†ã€‘åŠŸåæœ‰æ—  å¯¿å‘½é•¿çŸ­ éƒ½æ˜¯ä¸Šå¤©ç»™çš„</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/25/n13046979.md#1">å‰è‹è”æµ·å†›æ€»å¸ä»¤ï¼šå¸½çŠ¶UFOä»æµ·ä¸­é£å‡º</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/26/n13048557.md#1">ã€æ–¹è²è®¿è°ˆã€‘ä¸“è®¿ææœ‰ç”«ï¼šä»ä¸‰æ˜Ÿå †çœ‹å²å‰æ–‡åŒ–</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/16/n13026383.md#1">å‡ºå…¥å†¥ç•Œç¥ç•Œçœ‹åˆ°è¿‡å»æœªæ¥äº‹  ä»–ä»¬æç»™äººä»€ä¹ˆè®¯æ¯ï¼Ÿ</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/25/n13048015.md#1">ã€å¿ ä¹‰ä¼ ã€‘ä¹‰è–„äº‘å¤©çš„åå¤æˆ˜ç¥å…³ç¾½</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/29/n13055138.md#1">ã€æœ‰å†‡æé”™ã€‘ä¸­å…±ç™¾å¹´â€”â€”å¦¥å¦¥çš„å¤–å›½æ•Œå¯¹åŠ¿åŠ›</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/29/n13054689.md#1">ã€æ‹æ¡ˆæƒŠå¥‡ã€‘ä¹ æ›¿æ±ŸèƒŒé”…å–å›½ï¼Ÿå¤–äº¤éƒ¨é­çºµç«</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/29/n13056296.md#1">ã€ç›´æ’­ã€‘ç¾å›½ä¼šè®¨è®ºä¸­å…±å›½å®‰æ³•ä¾µå®³é¦™æ¸¯è‡ªç”±</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/21/n13037627.md#1">åœ¨Costcoè´­ç‰© å€¼å¾—å¤šä¹°çš„6ç§é£Ÿå“å’Œæ—¥ç”¨å“</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/20/n13033933.md#1">ç¾ç©ºå†›æœ€æ–°å‹F-15æˆ˜æœºåˆ°åº•æœ‰å¤šéšå½¢ï¼Ÿ</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/27/n13051297.md#1">ç»„å›¾ï¼šç¾å†›é¢‘ç¤ºæ½œè‰‡ æµ·ç‹¼çº§ç°èº« æ„åœ¨æ²›å…¬</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/28/n13051912.md#1">å­ç‘œå”±ã€ŠME!ã€‹ç™»æ¨ç‰¹è¶‹åŠ¿æ¦œå† å†› æ–¹ç¿èµå…¶æˆé•¿</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/27/n13051398.md#1">æ¢æœä¼Ÿåº†59å²ç”Ÿæ—¥ åˆ˜å˜‰ç²æ™’ç…§ç§€æ©çˆ±</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/29/n13055192.md#1">â€œèµšæ¥å¹²å˜› â€ æŸ¯å®‡çº¶è†ç›–è¶…ç¡¬æ‹’é™†800ä¸‡ç‰‡é…¬</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/27/n13050645.md#1">Deltaç—…æ¯’ä¾µå° è´¾æ°¸å©•æ€¥é€PAPRç­‰å™¨æè‡³å±ä¸œ</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/28/n13054065.md#1">å¼ é›¨ç»®ä¸ºä½•æ”¹åï¼Ÿåªå› ç”µè§†å¹¿å‘Šé‡Œå¸¸æœ‰ä¸€ä¸ªå­—</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/24/n13045323.md#1">ç—…æ¯’æºå¤´2å¯èƒ½ ä¸“å®¶ï¼šæ‰¾åˆ°æºå¤´å…³ä¹æ‰€æœ‰äººå®‰å±</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/27/n13050433.md#1">ä¸­ä¸œå¤©å‘è·å°â€œåœ°ç‹±ä¹‹äº•â€ æ•°ç™¾ä¸‡å¹´ä»æ˜¯è°œ</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/27/n13050609.md#1">å¹¸è¿æˆä¸ºèˆªç­ä¸Šå”¯ä¸€ä¹˜å®¢ å°ç”·ï¼šæˆ‘åƒå›ç‹</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/28/n13052817.md#1">æ—©ä¸Šå–ä¸€æ¯é˜²ä¾¿ç§˜ è¥å…»å¸ˆï¼šç‰›å¥¶å’Œå®ƒæ˜¯é»„é‡‘ç»„åˆ</a></li>
+<li><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/21/6/28/n13052117.md#1">é¦–æ¬¡å¼€å£è¯´è¯ç«Ÿå‘å¦ˆæ±‚æ•‘ å¥³å©´æ•‘äº†è‡ªå·±ä¸€å‘½</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/yzxnzi3171/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/yzxnzi3171/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/5/25/n11279696.htm">è®¸å…¶æ­£ï¼šä»–çš„èƒŒå½±</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yzxnzi3171/djy/blob/master/gb/19/5/25/n11279696.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/yzxnzi3171/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­å"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­å"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/xiao-wd.jpg" title="æ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜"  alt="æ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/li-up.jpg" title="ä»å¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»å¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸ä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸ä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/yzxnzi3171/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/yzxnzi3171/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yzxnzi3171/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
